src/analizadormoderacion/Parser.jj

/*
 * Copyright © 2002 Sun Microsystems, Inc., 4150 Network Circle, Santa Clara,
 * California 95054, U.S.A. All rights reserved.  Sun Microsystems, Inc. has
 * intellectual property rights relating to technology embodied in the product
 * that is described in this document. In particular, and without limitation,
 * these intellectual property rights may include one or more of the U.S.
 * patents listed at http://www.sun.com/patents and one or more additional
 * patents or pending patent applications in the U.S. and in other countries.
 * U.S. Government Rights - Commercial software. Government users are subject
 * to the Sun Microsystems, Inc. standard license agreement and applicable
 * provisions of the FAR and its supplements.  Use is subject to license terms.
 * Sun,  Sun Microsystems,  the Sun logo and  Java are trademarks or registered
 * trademarks of Sun Microsystems, Inc. in the U.S. and other countries.  This
 * product is covered and controlled by U.S. Export Control laws and may be
 * subject to the export or import laws in other countries.  Nuclear, missile,
 * chemical biological weapons or nuclear maritime end uses or end users,
 * whether direct or indirect, are strictly prohibited.  Export or reexport
 * to countries subject to U.S. embargo or to entities identified on U.S.
 * export exclusion lists, including, but not limited to, the denied persons
 * and specially designated nationals lists is strictly prohibited.
 */

options {
  
  STATIC = false;
  
}

PARSER_BEGIN(Analizador)

package analizadormoderacion;
import java.io.StringReader;
import java.io.BufferedReader;
import java.io.File;
import java.io.FileNotFoundException;
import java.io.FileReader;
import java.io.IOException;
import evalprocorreo.Usuario;
import evalprocorreo.Correo;

public class Analizador {
	
    public static int numErrores = 0;
    public static String listaPalabras = "";
	
	public static void main (String[] args) throws ParseException, IOException{			
			String texto = "El maestro es un tonto";
			StringReader s = new StringReader(texto);
			Analizador analizador = new Analizador(s);			
                        analizador.S();                        
                        Usuario admi = new Usuario("evalpro.itver@gmail.com", "evaluatec");
                        Correo c = new Correo(admi);
                        String[] destinatarios = {"androidfenix555@gmail.com","vrebo.deg@gmail.com",
                        "daniel_big3@hotmail.com"};
                        c.enviar(destinatarios,analizador.tipoAsunto(),analizador.respuesta());
                        System.out.println(analizador.respuesta());
	}
	
	
	public static String respuesta(){
                String cadena = "";
                if(numErrores == 0){
                    cadena += "No se encontro un lenguaje inapropiado en el comentario del alumno, verifiquelo con tiempo";
                }else{
                    cadena += listaPalabras + " " + numErrores;
                }
                    return cadena;
        }

	public static String tipoAsunto(){
                String cadena = "";
                if(numErrores == 0){
                    cadena += "Normal";
                }else{
                    cadena += "Urgente uso inadecuado del lenguaje";
                }
                    return cadena;
        }
}

PARSER_END(Analizador)

SKIP : { 
	 "\n" |"\t" |"\r" | " "
}

TOKEN : {
         <GROSERIA:"pendejo"|"pene"|"imbecil"|"verga"|"idiota"|"tonto"|"estupido"|"menso"|"escoria"|"pito"|"vagina"|
           "puto">
        | <ACEPTADO:~[]>
        }


void S():{}{
        (educacion()|vulgaridad())*
}

void educacion():{}{
        <ACEPTADO>
}

void vulgaridad():{}{
        (<GROSERIA>){Analizador.numErrores += 1;
                        listaPalabras += "" + token.image + ""; }
}
